Bison_Flex/parser.output
Terminals unused in grammar

   T_NEGACION
   T_ENTER
   T_EOF
   T_MODULO
   T_DIVISION_ENTERA
   T_IGUAL
   T_A
   T_DISTINTO
   T_DE
   T_NO
   T_HAGA
   T_INFINITAS
   T_RETORNA
   T_DEFINIR


Grammar

    0 $accept: programa $end

    1 programa: declaracion_sensores_motores declaracion_funciones instrucciones

    2 $@1: /* empty */

    3 $@2: /* empty */

    4 $@3: /* empty */

    5 $@4: /* empty */

    6 $@5: /* empty */

    7 declaracion_funciones: T_FUNCION $@1 T_IDENTIFICADOR $@2 T_PARENTESIS_IZQUIERDO lista_parametros $@3 T_PARENTESIS_DERECHO instrucciones $@4 T_FIN $@5 T_FUNCION declaracion_funciones
    8                      | /* empty */

    9 $@6: /* empty */

   10 $@7: /* empty */

   11 $@8: /* empty */

   12 $@9: /* empty */

   13 $@10: /* empty */

   14 declaracion_sensores_motores: T_UTILIZAR $@6 T_IDENTIFICADOR $@7 T_COMO $@8 T_IDENTIFICADOR $@9 T_EN $@10 T_IDENTIFICADOR declaracion_sensores_motores
   15                             | /* empty */

   16 instrucciones: instruccion instrucciones
   17              | /* empty */

   18 instruccion: instruccion_si
   19            | instruccion_caso
   20            | instruccion_mientras
   21            | instruccion_para
   22            | instruccion_repetir
   23            | instruccion_asignacion
   24            | instruccion_auto_asignacion
   25            | instruccion_repita_desde
   26            | instruccion_para_cada
   27            | instruccion_llamada_a_funcion
   28            | instruccion_retornar
   29            | T_REPITA instruccion T_MIENTRAS relacionales T_FIN T_REPITA

   30 $@11: /* empty */

   31 $@12: /* empty */

   32 instruccion_si: T_SI relacionales T_ENTONCES instrucciones $@11 T_FIN $@12 T_SI

   33 $@13: /* empty */

   34 $@14: /* empty */

   35 $@15: /* empty */

   36 instruccion_si: T_SI relacionales T_ENTONCES instrucciones $@13 T_SINO instrucciones $@14 T_FIN $@15 T_SI

   37 $@16: /* empty */

   38 $@17: /* empty */

   39 $@18: /* empty */

   40 instruccion_caso: T_CASO $@16 T_IDENTIFICADOR lista_casos sino_caso $@17 T_FIN $@18 T_CASO

   41 $@19: /* empty */

   42 $@20: /* empty */

   43 instruccion_caso: T_CASO lista_casos sino_caso $@19 T_FIN $@20 T_CASO

   44 $@21: /* empty */

   45 $@22: /* empty */

   46 $@23: /* empty */

   47 instruccion_mientras: T_MIENTRAS relacionales $@21 T_EJECUTE instrucciones $@22 T_FIN $@23 T_MIENTRAS

   48 $@24: /* empty */

   49 $@25: /* empty */

   50 $@26: /* empty */

   51 $@27: /* empty */

   52 $@28: /* empty */

   53 $@29: /* empty */

   54 instruccion_para: T_PARA $@24 T_IDENTIFICADOR $@25 T_SIMBOLO_IGUAL relacionales $@26 T_HASTA relacionales $@27 T_EJECUTE instrucciones $@28 T_FIN $@29 T_PARA

   55 $@30: /* empty */

   56 $@31: /* empty */

   57 $@32: /* empty */

   58 instruccion_repetir: T_REPETIR relacionales $@30 T_VECES instrucciones $@31 T_FIN $@32 T_REPETIR

   59 instruccion_asignacion: T_IDENTIFICADOR T_SIMBOLO_IGUAL relacionales

   60 $@33: /* empty */

   61 instruccion_asignacion: id_arreglo $@33 T_SIMBOLO_IGUAL relacionales
   62                       | T_IDENTIFICADOR T_SIMBOLO_IGUAL lista_indices_declaracion

   63 $@34: /* empty */

   64 $@35: /* empty */

   65 instruccion_auto_asignacion: T_IDENTIFICADOR $@34 T_SUMA $@35 T_SIMBOLO_IGUAL relacionales

   66 $@36: /* empty */

   67 $@37: /* empty */

   68 instruccion_auto_asignacion: T_IDENTIFICADOR $@36 T_DIVISION $@37 T_SIMBOLO_IGUAL relacionales

   69 $@38: /* empty */

   70 $@39: /* empty */

   71 instruccion_auto_asignacion: T_IDENTIFICADOR $@38 T_SIMBOLO_MODULO $@39 T_SIMBOLO_IGUAL relacionales

   72 $@40: /* empty */

   73 $@41: /* empty */

   74 instruccion_auto_asignacion: T_IDENTIFICADOR $@40 T_MULTIPLICACION $@41 T_SIMBOLO_IGUAL relacionales

   75 $@42: /* empty */

   76 $@43: /* empty */

   77 instruccion_auto_asignacion: T_IDENTIFICADOR $@42 T_RESTA $@43 T_SIMBOLO_IGUAL relacionales

   78 $@44: /* empty */

   79 $@45: /* empty */

   80 instruccion_auto_asignacion: T_IDENTIFICADOR $@44 T_EXPONENCIACION $@45 T_SIMBOLO_IGUAL relacionales

   81 $@46: /* empty */

   82 $@47: /* empty */

   83 $@48: /* empty */

   84 $@49: /* empty */

   85 $@50: /* empty */

   86 instruccion_repita_desde: T_REPITA $@46 T_DESDE relacionales $@47 T_HASTA relacionales $@48 T_EJECUTE instrucciones $@49 T_FIN $@50 T_REPITA

   87 $@51: /* empty */

   88 $@52: /* empty */

   89 $@53: /* empty */

   90 $@54: /* empty */

   91 $@55: /* empty */

   92 $@56: /* empty */

   93 instruccion_para_cada: T_PARA $@51 T_CADA relacionales $@52 T_EN relacionales $@53 T_EJECUTE instrucciones $@54 T_FIN $@55 T_PARA $@56 T_CADA

   94 $@57: /* empty */

   95 $@58: /* empty */

   96 instruccion_llamada_a_funcion: T_IDENTIFICADOR $@57 T_PARENTESIS_IZQUIERDO lista_parametros $@58 T_PARENTESIS_DERECHO

   97 instruccion_retornar: T_RETORNAR relacionales

   98 relacionales: relacionales T_MENOR expresiones
   99             | relacionales T_MAYOR expresiones
  100             | relacionales T_MAYOR_IGUAL expresiones
  101             | relacionales T_MENOR_IGUAL expresiones
  102             | relacionales T_IGUALDAD expresiones
  103             | relacionales T_DESIGUALDAD expresiones
  104             | expresiones

  105 expresiones: expresiones T_SUMA factores
  106            | expresiones T_RESTA factores
  107            | expresiones T_OPERADOR_O factores
  108            | expresiones T_SIMBOLO_OPERADOR_O factores
  109            | factores

  110 factores: factores T_MULTIPLICACION terminales
  111         | factores T_DIVISION terminales
  112         | factores T_OPERADOR_Y terminales
  113         | factores T_SIMBOLO_OPERADOR_Y terminales
  114         | factores T_SIMBOLO_MODULO terminales
  115         | terminales

  116 terminales: T_PARENTESIS_IZQUIERDO relacionales T_PARENTESIS_DERECHO
  117           | literales
  118           | id_variable
  119           | T_IDENTIFICADOR
  120           | T_PARENTESIS_IZQUIERDO relacionales T_PARENTESIS_DERECHO T_ES tipo_de_dato

  121 tipo_de_dato: T_ENTERO
  122             | T_FLOTANTE
  123             | T_CADENA
  124             | T_BOOLEANO
  125             | T_CARACTER

  126 id_variable: id_funcion
  127            | id_arreglo

  128 $@59: /* empty */

  129 $@60: /* empty */

  130 id_funcion: T_IDENTIFICADOR $@59 T_PARENTESIS_IZQUIERDO lista_parametros $@60 T_PARENTESIS_DERECHO

  131 id_arreglo: T_IDENTIFICADOR lista_indices

  132 literal_booleana: T_VERDADERO
  133                 | T_FALSO

  134 literales: literal_booleana
  135          | T_LITERAL_NUMERICA
  136          | T_LITERAL_CARACTER
  137          | T_LITERAL_FLOTANTE
  138          | T_LITERAL_CADENA

  139 lista_indices: T_CORCHETE_IZQUIERDO relacionales T_CORCHETE_DERECHO lista_indices
  140              | T_CORCHETE_IZQUIERDO relacionales T_CORCHETE_DERECHO

  141 lista_indices_declaracion: T_CORCHETE_IZQUIERDO T_CORCHETE_DERECHO

  142 $@61: /* empty */

  143 $@62: /* empty */

  144 lista_indices_declaracion: T_CORCHETE_IZQUIERDO T_CORCHETE_DERECHO $@61 T_CORCHETE_IZQUIERDO $@62 T_CORCHETE_DERECHO

  145 lista_parametros: relacionales acumulador_parametros
  146                 | /* empty */

  147 acumulador_parametros: T_COMA relacionales acumulador_parametros
  148                      | /* empty */

  149 lista_casos: T_DOS_PUNTOS relacionales T_DOS_PUNTOS instrucciones lista_casos
  150            | T_DOS_PUNTOS relacionales T_DOS_PUNTOS instrucciones

  151 sino_caso: T_SINO instrucciones
  152          | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
T_IDENTIFICADOR (258) 7 14 40 54 59 62 65 68 71 74 77 80 96 119 130
    131
T_SIMBOLO_IGUAL (259) 54 59 61 62 65 68 71 74 77 80
T_SUMA (260) 65 105
T_RESTA (261) 77 106
T_MULTIPLICACION (262) 74 110
T_DIVISION (263) 68 111
T_SIMBOLO_MODULO (264) 71 114
T_EXPONENCIACION (265) 80
T_MAYOR_IGUAL (266) 100
T_MENOR_IGUAL (267) 101
T_MENOR (268) 98
T_MAYOR (269) 99
T_IGUALDAD (270) 102
T_NEGACION (271)
T_SIMBOLO_OPERADOR_Y (272) 113
T_SIMBOLO_OPERADOR_O (273) 108
T_CORCHETE_IZQUIERDO (274) 139 140 141 144
T_CORCHETE_DERECHO (275) 139 140 141 144
T_PARENTESIS_IZQUIERDO (276) 7 96 116 120 130
T_PARENTESIS_DERECHO (277) 7 96 116 120 130
T_DOS_PUNTOS (278) 149 150
T_DESIGUALDAD (279) 103
T_LITERAL_CARACTER (280) 136
T_LITERAL_FLOTANTE (281) 137
T_LITERAL_CADENA (282) 138
T_COMA (283) 147
T_ENTER (284)
T_EOF (285)
T_ENTERO (286) 121
T_FLOTANTE (287) 122
T_BOOLEANO (288) 124
T_CARACTER (289) 125
T_CADENA (290) 123
T_ES (291) 120
T_MODULO (292)
T_DIVISION_ENTERA (293)
T_IGUAL (294)
T_A (295)
T_DISTINTO (296)
T_DE (297)
T_OPERADOR_Y (298) 112
T_OPERADOR_O (299) 107
T_NO (300)
T_SI (301) 32 36
T_ENTONCES (302) 32 36
T_FIN (303) 7 29 32 36 40 43 47 54 58 86 93
T_SINO (304) 36 151
T_CASO (305) 40 43
T_MIENTRAS (306) 29 47
T_HAGA (307)
T_EJECUTE (308) 47 54 86 93
T_REPETIR (309) 58
T_INFINITAS (310)
T_VECES (311) 58
T_PARA (312) 54 93
T_DESDE (313) 86
T_REPITA (314) 29 86
T_CADA (315) 93
T_EN (316) 14 93
T_FUNCION (317) 7
T_HASTA (318) 54 86
T_RETORNA (319)
T_RETORNAR (320) 97
T_UTILIZAR (321) 14
T_COMO (322) 14
T_LITERAL_NUMERICA (323) 135
T_DEFINIR (324)
T_VERDADERO (325) 132
T_FALSO (326) 133


Nonterminals, with rules where they appear

$accept (72)
    on left: 0
programa (73)
    on left: 1, on right: 0
declaracion_funciones (74)
    on left: 7 8, on right: 1 7
$@1 (75)
    on left: 2, on right: 7
$@2 (76)
    on left: 3, on right: 7
$@3 (77)
    on left: 4, on right: 7
$@4 (78)
    on left: 5, on right: 7
$@5 (79)
    on left: 6, on right: 7
declaracion_sensores_motores (80)
    on left: 14 15, on right: 1 14
$@6 (81)
    on left: 9, on right: 14
$@7 (82)
    on left: 10, on right: 14
$@8 (83)
    on left: 11, on right: 14
$@9 (84)
    on left: 12, on right: 14
$@10 (85)
    on left: 13, on right: 14
instrucciones (86)
    on left: 16 17, on right: 1 7 16 32 36 47 54 58 86 93 149 150 151
instruccion (87)
    on left: 18 19 20 21 22 23 24 25 26 27 28 29, on right: 16 29
instruccion_si (88)
    on left: 32 36, on right: 18
$@11 (89)
    on left: 30, on right: 32
$@12 (90)
    on left: 31, on right: 32
$@13 (91)
    on left: 33, on right: 36
$@14 (92)
    on left: 34, on right: 36
$@15 (93)
    on left: 35, on right: 36
instruccion_caso (94)
    on left: 40 43, on right: 19
$@16 (95)
    on left: 37, on right: 40
$@17 (96)
    on left: 38, on right: 40
$@18 (97)
    on left: 39, on right: 40
$@19 (98)
    on left: 41, on right: 43
$@20 (99)
    on left: 42, on right: 43
instruccion_mientras (100)
    on left: 47, on right: 20
$@21 (101)
    on left: 44, on right: 47
$@22 (102)
    on left: 45, on right: 47
$@23 (103)
    on left: 46, on right: 47
instruccion_para (104)
    on left: 54, on right: 21
$@24 (105)
    on left: 48, on right: 54
$@25 (106)
    on left: 49, on right: 54
$@26 (107)
    on left: 50, on right: 54
$@27 (108)
    on left: 51, on right: 54
$@28 (109)
    on left: 52, on right: 54
$@29 (110)
    on left: 53, on right: 54
instruccion_repetir (111)
    on left: 58, on right: 22
$@30 (112)
    on left: 55, on right: 58
$@31 (113)
    on left: 56, on right: 58
$@32 (114)
    on left: 57, on right: 58
instruccion_asignacion (115)
    on left: 59 61 62, on right: 23
$@33 (116)
    on left: 60, on right: 61
instruccion_auto_asignacion (117)
    on left: 65 68 71 74 77 80, on right: 24
$@34 (118)
    on left: 63, on right: 65
$@35 (119)
    on left: 64, on right: 65
$@36 (120)
    on left: 66, on right: 68
$@37 (121)
    on left: 67, on right: 68
$@38 (122)
    on left: 69, on right: 71
$@39 (123)
    on left: 70, on right: 71
$@40 (124)
    on left: 72, on right: 74
$@41 (125)
    on left: 73, on right: 74
$@42 (126)
    on left: 75, on right: 77
$@43 (127)
    on left: 76, on right: 77
$@44 (128)
    on left: 78, on right: 80
$@45 (129)
    on left: 79, on right: 80
instruccion_repita_desde (130)
    on left: 86, on right: 25
$@46 (131)
    on left: 81, on right: 86
$@47 (132)
    on left: 82, on right: 86
$@48 (133)
    on left: 83, on right: 86
$@49 (134)
    on left: 84, on right: 86
$@50 (135)
    on left: 85, on right: 86
instruccion_para_cada (136)
    on left: 93, on right: 26
$@51 (137)
    on left: 87, on right: 93
$@52 (138)
    on left: 88, on right: 93
$@53 (139)
    on left: 89, on right: 93
$@54 (140)
    on left: 90, on right: 93
$@55 (141)
    on left: 91, on right: 93
$@56 (142)
    on left: 92, on right: 93
instruccion_llamada_a_funcion (143)
    on left: 96, on right: 27
$@57 (144)
    on left: 94, on right: 96
$@58 (145)
    on left: 95, on right: 96
instruccion_retornar (146)
    on left: 97, on right: 28
relacionales (147)
    on left: 98 99 100 101 102 103 104, on right: 29 32 36 47 54 58
    59 61 65 68 71 74 77 80 86 93 97 98 99 100 101 102 103 116 120
    139 140 145 147 149 150
expresiones (148)
    on left: 105 106 107 108 109, on right: 98 99 100 101 102 103 104
    105 106 107 108
factores (149)
    on left: 110 111 112 113 114 115, on right: 105 106 107 108 109
    110 111 112 113 114
terminales (150)
    on left: 116 117 118 119 120, on right: 110 111 112 113 114 115
tipo_de_dato (151)
    on left: 121 122 123 124 125, on right: 120
id_variable (152)
    on left: 126 127, on right: 118
id_funcion (153)
    on left: 130, on right: 126
$@59 (154)
    on left: 128, on right: 130
$@60 (155)
    on left: 129, on right: 130
id_arreglo (156)
    on left: 131, on right: 61 127
literal_booleana (157)
    on left: 132 133, on right: 134
literales (158)
    on left: 134 135 136 137 138, on right: 117
lista_indices (159)
    on left: 139 140, on right: 131 139
lista_indices_declaracion (160)
    on left: 141 144, on right: 62
$@61 (161)
    on left: 142, on right: 144
$@62 (162)
    on left: 143, on right: 144
lista_parametros (163)
    on left: 145 146, on right: 7 96 130
acumulador_parametros (164)
    on left: 147 148, on right: 145 147
lista_casos (165)
    on left: 149 150, on right: 40 43 149
sino_caso (166)
    on left: 151 152, on right: 40 43


state 0

    0 $accept: . programa $end

    T_UTILIZAR  shift, and go to state 1

    $default  reduce using rule 15 (declaracion_sensores_motores)

    programa                      go to state 2
    declaracion_sensores_motores  go to state 3


state 1

   14 declaracion_sensores_motores: T_UTILIZAR . $@6 T_IDENTIFICADOR $@7 T_COMO $@8 T_IDENTIFICADOR $@9 T_EN $@10 T_IDENTIFICADOR declaracion_sensores_motores

    $default  reduce using rule 9 ($@6)

    $@6  go to state 4


state 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


state 3

    1 programa: declaracion_sensores_motores . declaracion_funciones instrucciones

    T_FUNCION  shift, and go to state 6

    $default  reduce using rule 8 (declaracion_funciones)

    declaracion_funciones  go to state 7


state 4

   14 declaracion_sensores_motores: T_UTILIZAR $@6 . T_IDENTIFICADOR $@7 T_COMO $@8 T_IDENTIFICADOR $@9 T_EN $@10 T_IDENTIFICADOR declaracion_sensores_motores

    T_IDENTIFICADOR  shift, and go to state 8


state 5

    0 $accept: programa $end .

    $default  accept


state 6

    7 declaracion_funciones: T_FUNCION . $@1 T_IDENTIFICADOR $@2 T_PARENTESIS_IZQUIERDO lista_parametros $@3 T_PARENTESIS_DERECHO instrucciones $@4 T_FIN $@5 T_FUNCION declaracion_funciones

    $default  reduce using rule 2 ($@1)

    $@1  go to state 9


state 7

    1 programa: declaracion_sensores_motores declaracion_funciones . instrucciones

    T_IDENTIFICADOR  shift, and go to state 10
    T_SI             shift, and go to state 11
    T_CASO           shift, and go to state 12
    T_MIENTRAS       shift, and go to state 13
    T_REPETIR        shift, and go to state 14
    T_PARA           shift, and go to state 15
    T_REPITA         shift, and go to state 16
    T_RETORNAR       shift, and go to state 17

    $default  reduce using rule 17 (instrucciones)

    instrucciones                  go to state 18
    instruccion                    go to state 19
    instruccion_si                 go to state 20
    instruccion_caso               go to state 21
    instruccion_mientras           go to state 22
    instruccion_para               go to state 23
    instruccion_repetir            go to state 24
    instruccion_asignacion         go to state 25
    instruccion_auto_asignacion    go to state 26
    instruccion_repita_desde       go to state 27
    instruccion_para_cada          go to state 28
    instruccion_llamada_a_funcion  go to state 29
    instruccion_retornar           go to state 30
    id_arreglo                     go to state 31


state 8

   14 declaracion_sensores_motores: T_UTILIZAR $@6 T_IDENTIFICADOR . $@7 T_COMO $@8 T_IDENTIFICADOR $@9 T_EN $@10 T_IDENTIFICADOR declaracion_sensores_motores

    $default  reduce using rule 10 ($@7)

    $@7  go to state 32


state 9

    7 declaracion_funciones: T_FUNCION $@1 . T_IDENTIFICADOR $@2 T_PARENTESIS_IZQUIERDO lista_parametros $@3 T_PARENTESIS_DERECHO instrucciones $@4 T_FIN $@5 T_FUNCION declaracion_funciones

    T_IDENTIFICADOR  shift, and go to state 33


state 10

   59 instruccion_asignacion: T_IDENTIFICADOR . T_SIMBOLO_IGUAL relacionales
   62                       | T_IDENTIFICADOR . T_SIMBOLO_IGUAL lista_indices_declaracion
   65 instruccion_auto_asignacion: T_IDENTIFICADOR . $@34 T_SUMA $@35 T_SIMBOLO_IGUAL relacionales
   68                            | T_IDENTIFICADOR . $@36 T_DIVISION $@37 T_SIMBOLO_IGUAL relacionales
   71                            | T_IDENTIFICADOR . $@38 T_SIMBOLO_MODULO $@39 T_SIMBOLO_IGUAL relacionales
   74                            | T_IDENTIFICADOR . $@40 T_MULTIPLICACION $@41 T_SIMBOLO_IGUAL relacionales
   77                            | T_IDENTIFICADOR . $@42 T_RESTA $@43 T_SIMBOLO_IGUAL relacionales
   80                            | T_IDENTIFICADOR . $@44 T_EXPONENCIACION $@45 T_SIMBOLO_IGUAL relacionales
   96 instruccion_llamada_a_funcion: T_IDENTIFICADOR . $@57 T_PARENTESIS_IZQUIERDO lista_parametros $@58 T_PARENTESIS_DERECHO
  131 id_arreglo: T_IDENTIFICADOR . lista_indices

    T_SIMBOLO_IGUAL       shift, and go to state 34
    T_CORCHETE_IZQUIERDO  shift, and go to state 35

    T_RESTA                 reduce using rule 75 ($@42)
    T_MULTIPLICACION        reduce using rule 72 ($@40)
    T_DIVISION              reduce using rule 66 ($@36)
    T_SIMBOLO_MODULO        reduce using rule 69 ($@38)
    T_EXPONENCIACION        reduce using rule 78 ($@44)
    T_PARENTESIS_IZQUIERDO  reduce using rule 94 ($@57)
    $default                reduce using rule 63 ($@34)

    $@34           go to state 36
    $@36           go to state 37
    $@38           go to state 38
    $@40           go to state 39
    $@42           go to state 40
    $@44           go to state 41
    $@57           go to state 42
    lista_indices  go to state 43


state 11

   32 instruccion_si: T_SI . relacionales T_ENTONCES instrucciones $@11 T_FIN $@12 T_SI
   36               | T_SI . relacionales T_ENTONCES instrucciones $@13 T_SINO instrucciones $@14 T_FIN $@15 T_SI

    T_IDENTIFICADOR         shift, and go to state 44
    T_PARENTESIS_IZQUIERDO  shift, and go to state 45
    T_LITERAL_CARACTER      shift, and go to state 46
    T_LITERAL_FLOTANTE      shift, and go to state 47
    T_LITERAL_CADENA        shift, and go to state 48
    T_LITERAL_NUMERICA      shift, and go to state 49
    T_VERDADERO             shift, and go to state 50
    T_FALSO                 shift, and go to state 51

    relacionales      go to state 52
    expresiones       go to state 53
    factores          go to state 54
    terminales        go to state 55
    id_variable       go to state 56
    id_funcion        go to state 57
    id_arreglo        go to state 58
    literal_booleana  go to state 59
    literales         go to state 60


state 12

   40 instruccion_caso: T_CASO . $@16 T_IDENTIFICADOR lista_casos sino_caso $@17 T_FIN $@18 T_CASO
   43                 | T_CASO . lista_casos sino_caso $@19 T_FIN $@20 T_CASO

    T_DOS_PUNTOS  shift, and go to state 61

    $default  reduce using rule 37 ($@16)

    $@16         go to state 62
    lista_casos  go to state 63


state 13

   47 instruccion_mientras: T_MIENTRAS . relacionales $@21 T_EJECUTE instrucciones $@22 T_FIN $@23 T_MIENTRAS

    T_IDENTIFICADOR         shift, and go to state 44
    T_PARENTESIS_IZQUIERDO  shift, and go to state 45
    T_LITERAL_CARACTER      shift, and go to state 46
    T_LITERAL_FLOTANTE      shift, and go to state 47
    T_LITERAL_CADENA        shift, and go to state 48
    T_LITERAL_NUMERICA      shift, and go to state 49
    T_VERDADERO             shift, and go to state 50
    T_FALSO                 shift, and go to state 51

    relacionales      go to state 64
    expresiones       go to state 53
    factores          go to state 54
    terminales        go to state 55
    id_variable       go to state 56
    id_funcion        go to state 57
    id_arreglo        go to state 58
    literal_booleana  go to state 59
    literales         go to state 60


state 14

   58 instruccion_repetir: T_REPETIR . relacionales $@30 T_VECES instrucciones $@31 T_FIN $@32 T_REPETIR

    T_IDENTIFICADOR         shift, and go to state 44
    T_PARENTESIS_IZQUIERDO  shift, and go to state 45
    T_LITERAL_CARACTER      shift, and go to state 46
    T_LITERAL_FLOTANTE      shift, and go to state 47
    T_LITERAL_CADENA        shift, and go to state 48
    T_LITERAL_NUMERICA      shift, and go to state 49
    T_VERDADERO             shift, and go to state 50
    T_FALSO                 shift, and go to state 51

    relacionales      go to state 65
    expresiones       go to state 53
    factores          go to state 54
    terminales        go to state 55
    id_variable       go to state 56
    id_funcion        go to state 57
    id_arreglo        go to state 58
    literal_booleana  go to state 59
    literales         go to state 60


state 15

   54 instruccion_para: T_PARA . $@24 T_IDENTIFICADOR $@25 T_SIMBOLO_IGUAL relacionales $@26 T_HASTA relacionales $@27 T_EJECUTE instrucciones $@28 T_FIN $@29 T_PARA
   93 instruccion_para_cada: T_PARA . $@51 T_CADA relacionales $@52 T_EN relacionales $@53 T_EJECUTE instrucciones $@54 T_FIN $@55 T_PARA $@56 T_CADA

    T_CADA    reduce using rule 87 ($@51)
    $default  reduce using rule 48 ($@24)

    $@24  go to state 66
    $@51  go to state 67


state 16

   29 instruccion: T_REPITA . instruccion T_MIENTRAS relacionales T_FIN T_REPITA
   86 instruccion_repita_desde: T_REPITA . $@46 T_DESDE relacionales $@47 T_HASTA relacionales $@48 T_EJECUTE instrucciones $@49 T_FIN $@50 T_REPITA

    T_IDENTIFICADOR  shift, and go to state 10
    T_SI             shift, and go to state 11
    T_CASO           shift, and go to state 12
    T_MIENTRAS       shift, and go to state 13
    T_REPETIR        shift, and go to state 14
    T_PARA           shift, and go to state 15
    T_REPITA         shift, and go to state 16
    T_RETORNAR       shift, and go to state 17

    $default  reduce using rule 81 ($@46)

    instruccion                    go to state 68
    instruccion_si                 go to state 20
    instruccion_caso               go to state 21
    instruccion_mientras           go to state 22
    instruccion_para               go to state 23
    instruccion_repetir            go to state 24
    instruccion_asignacion         go to state 25
    instruccion_auto_asignacion    go to state 26
    instruccion_repita_desde       go to state 27
    $@46                           go to state 69
    instruccion_para_cada          go to state 28
    instruccion_llamada_a_funcion  go to state 29
    instruccion_retornar           go to state 30
    id_arreglo                     go to state 31


state 17

   97 instruccion_retornar: T_RETORNAR . relacionales

    T_IDENTIFICADOR         shift, and go to state 44
    T_PARENTESIS_IZQUIERDO  shift, and go to state 45
    T_LITERAL_CARACTER      shift, and go to state 46
    T_LITERAL_FLOTANTE      shift, and go to state 47
    T_LITERAL_CADENA        shift, and go to state 48
    T_LITERAL_NUMERICA      shift, and go to state 49
    T_VERDADERO             shift, and go to state 50
    T_FALSO                 shift, and go to state 51

    relacionales      go to state 70
    expresiones       go to state 53
    factores          go to state 54
    terminales        go to state 55
    id_variable       go to state 56
    id_funcion        go to state 57
    id_arreglo        go to state 58
    literal_booleana  go to state 59
    literales         go to state 60


state 18

    1 programa: declaracion_sensores_motores declaracion_funciones instrucciones .

    $default  reduce using rule 1 (programa)


state 19

   16 instrucciones: instruccion . instrucciones

    T_IDENTIFICADOR  shift, and go to state 10
    T_SI             shift, and go to state 11
    T_CASO           shift, and go to state 12
    T_MIENTRAS       shift, and go to state 13
    T_REPETIR        shift, and go to state 14
    T_PARA           shift, and go to state 15
    T_REPITA         shift, and go to state 16
    T_RETORNAR       shift, and go to state 17

    $default  reduce using rule 17 (instrucciones)

    instrucciones                  go to state 71
    instruccion                    go to state 19
    instruccion_si                 go to state 20
    instruccion_caso               go to state 21
    instruccion_mientras           go to state 22
    instruccion_para               go to state 23
    instruccion_repetir            go to state 24
    instruccion_asignacion         go to state 25
    instruccion_auto_asignacion    go to state 26
    instruccion_repita_desde       go to state 27
    instruccion_para_cada          go to state 28
    instruccion_llamada_a_funcion  go to state 29
    instruccion_retornar           go to state 30
    id_arreglo                     go to state 31


state 20

   18 instruccion: instruccion_si .

    $default  reduce using rule 18 (instruccion)


state 21

   19 instruccion: instruccion_caso .

    $default  reduce using rule 19 (instruccion)


state 22

   20 instruccion: instruccion_mientras .

    $default  reduce using rule 20 (instruccion)


state 23

   21 instruccion: instruccion_para .

    $default  reduce using rule 21 (instruccion)


state 24

   22 instruccion: instruccion_repetir .

    $default  reduce using rule 22 (instruccion)


state 25

   23 instruccion: instruccion_asignacion .

    $default  reduce using rule 23 (instruccion)


state 26

   24 instruccion: instruccion_auto_asignacion .

    $default  reduce using rule 24 (instruccion)


state 27

   25 instruccion: instruccion_repita_desde .

    $default  reduce using rule 25 (instruccion)


state 28

   26 instruccion: instruccion_para_cada .

    $default  reduce using rule 26 (instruccion)


state 29

   27 instruccion: instruccion_llamada_a_funcion .

    $default  reduce using rule 27 (instruccion)


state 30

   28 instruccion: instruccion_retornar .

    $default  reduce using rule 28 (instruccion)


state 31

   61 instruccion_asignacion: id_arreglo . $@33 T_SIMBOLO_IGUAL relacionales

    $default  reduce using rule 60 ($@33)

    $@33  go to state 72


state 32

   14 declaracion_sensores_motores: T_UTILIZAR $@6 T_IDENTIFICADOR $@7 . T_COMO $@8 T_IDENTIFICADOR $@9 T_EN $@10 T_IDENTIFICADOR declaracion_sensores_motores

    T_COMO  shift, and go to state 73


state 33

    7 declaracion_funciones: T_FUNCION $@1 T_IDENTIFICADOR . $@2 T_PARENTESIS_IZQUIERDO lista_parametros $@3 T_PARENTESIS_DERECHO instrucciones $@4 T_FIN $@5 T_FUNCION declaracion_funciones

    $default  reduce using rule 3 ($@2)

    $@2  go to state 74


state 34

   59 instruccion_asignacion: T_IDENTIFICADOR T_SIMBOLO_IGUAL . relacionales
   62                       | T_IDENTIFICADOR T_SIMBOLO_IGUAL . lista_indices_declaracion

    T_IDENTIFICADOR         shift, and go to state 44
    T_CORCHETE_IZQUIERDO    shift, and go to state 75
    T_PARENTESIS_IZQUIERDO  shift, and go to state 45
    T_LITERAL_CARACTER      shift, and go to state 46
    T_LITERAL_FLOTANTE      shift, and go to state 47
    T_LITERAL_CADENA        shift, and go to state 48
    T_LITERAL_NUMERICA      shift, and go to state 49
    T_VERDADERO             shift, and go to state 50
    T_FALSO                 shift, and go to state 51

    relacionales               go to state 76
    expresiones                go to state 53
    factores                   go to state 54
    terminales                 go to state 55
    id_variable                go to state 56
    id_funcion                 go to state 57
    id_arreglo                 go to state 58
    literal_booleana           go to state 59
    literales                  go to state 60
    lista_indices_declaracion  go to state 77


state 35

  139 lista_indices: T_CORCHETE_IZQUIERDO . relacionales T_CORCHETE_DERECHO lista_indices
  140              | T_CORCHETE_IZQUIERDO . relacionales T_CORCHETE_DERECHO

    T_IDENTIFICADOR         shift, and go to state 44
    T_PARENTESIS_IZQUIERDO  shift, and go to state 45
    T_LITERAL_CARACTER      shift, and go to state 46
    T_LITERAL_FLOTANTE      shift, and go to state 47
    T_LITERAL_CADENA        shift, and go to state 48
    T_LITERAL_NUMERICA      shift, and go to state 49
    T_VERDADERO             shift, and go to state 50
    T_FALSO                 shift, and go to state 51

    relacionales      go to state 78
    expresiones       go to state 53
    factores          go to state 54
    terminales        go to state 55
    id_variable       go to state 56
    id_funcion        go to state 57
    id_arreglo        go to state 58
    literal_booleana  go to state 59
    literales         go to state 60


state 36

   65 instruccion_auto_asignacion: T_IDENTIFICADOR $@34 . T_SUMA $@35 T_SIMBOLO_IGUAL relacionales

    T_SUMA  shift, and go to state 79


state 37

   68 instruccion_auto_asignacion: T_IDENTIFICADOR $@36 . T_DIVISION $@37 T_SIMBOLO_IGUAL relacionales

    T_DIVISION  shift, and go to state 80


state 38

   71 instruccion_auto_asignacion: T_IDENTIFICADOR $@38 . T_SIMBOLO_MODULO $@39 T_SIMBOLO_IGUAL relacionales

    T_SIMBOLO_MODULO  shift, and go to state 81


state 39

   74 instruccion_auto_asignacion: T_IDENTIFICADOR $@40 . T_MULTIPLICACION $@41 T_SIMBOLO_IGUAL relacionales

    T_MULTIPLICACION  shift, and go to state 82


state 40

   77 instruccion_auto_asignacion: T_IDENTIFICADOR $@42 . T_RESTA $@43 T_SIMBOLO_IGUAL relacionales

    T_RESTA  shift, and go to state 83


state 41

   80 instruccion_auto_asignacion: T_IDENTIFICADOR $@44 . T_EXPONENCIACION $@45 T_SIMBOLO_IGUAL relacionales

    T_EXPONENCIACION  shift, and go to state 84


state 42

   96 instruccion_llamada_a_funcion: T_IDENTIFICADOR $@57 . T_PARENTESIS_IZQUIERDO lista_parametros $@58 T_PARENTESIS_DERECHO
